--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "data/kmnist"]
-	path = data/kmnist
+	path = data/kuzushiji49/kmnist
 	url = https://github.com/rois-codh/kmnist.git
+[submodule "random_lumberjacks"]
+	path = random_lumberjacks
+	url = https://github.com/coreyryanhanson/random_lumberjacks.git
