--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = data/kuzushiji49/kmnist
 	url = https://github.com/rois-codh/kmnist.git
 [submodule "random_lumberjacks"]
-	path = random_lumberjacks
+	path = functions/random_lumberjacks
 	url = https://github.com/coreyryanhanson/random_lumberjacks.git
 [submodule "choubenkyo_kivy_app"]
 	path = choubenkyo_kivy_app
