archive assignment code

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-model_backups/*
-presentation
-xxARCHIVE
-.ipynb_checkpoints
-__pycache__
-data/kuzushiji49/test
-data/kuzushiji49/train
-data/kuzushiji49/k49_classmap.csv
-functions/__pycache__
-initial_findings/.ipynb_checkpoints
-!model_backups/tf_gen_kanji
+mod4project/model_backups/*
+mod4project/presentation
+mod4project/xxARCHIVE
+**/.ipynb_checkpoints
+**/__pycache__
+**/.mypy_cache
+mod4project/data/kuzushiji49/test
+mod4project/data/kuzushiji49/train
+mod4project/data/kuzushiji49/k49_classmap.csv
+!mod4project/model_backups/tf_gen_kanji
